# AI_cup_2021

./: .gitignore  Annealing.hpp  AntColony.hpp  AntColony_old.hpp  CMakeLists.txt  LTMatrix.hpp  Matrix.hpp  Problem.hpp  SeedSearch.hpp  SeedTest.hpp  TwoFiveOPT.hpp  TwoOPT.hpp  main  main.cpp  makefile  visual.ipynb
main.dSYM/Contents/Resources/DWARF/: main
results/: AI_cup_2021_valsecchi_michelangelo.xlsx  report.ipynb
results/tours/: ch130.tsp  d198.tsp  eil76.tsp  fl1577.tsp  kroA100.tsp  lin318.tsp  pcb442.tsp  pr439.tsp  rat783.tsp  u1060.tsp  u1060_25.tsp
